--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="col-md-6 col-sm-12">
 						<div class="styled-input">
 							<input type="text" required />
-							<label>Email</label> 
+							<label>email</label> 
 						</div>
 					</div>
 					<div class="col-md-6 col-sm-12">
