--- a/index.html
+++ b/index.html
@@ -295,6 +295,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 				<div class="row footer_bottom">
 				    <div class="copy">
+						<p><a href="https://junhossain.github.io/Portfolio/#" target="_blank">junaid</a></p>
+						<p><a href="https://marzzzsiam.github.io/Marzan_Ahmed/" target="_blank">siam</a></p>
+						<p><a href="https://arkibba.github.io/Arkibba/" target="_blank">Arkive</a></p>
 			           <p>© 2025 portfolio by <a href="#" target="_blank">ZubaiZza</a></p>
 		            </div>
 					  
